--- a/Contacto.html
+++ b/Contacto.html
@@ -8,7 +8,14 @@
 <body>
     <h1>Hola Mundo</h1>
     <header>
-        
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
